[gd_scene load_steps=23 format=2]

[ext_resource path="res://scenes/button_color_tint/press_color_tint.gd" type="Script" id=1]
[ext_resource path="res://scenes/main_menu/default_font.tres" type="DynamicFont" id=2]
[ext_resource path="res://sprites/close_button.svg" type="Texture" id=3]
[ext_resource path="res://scenes/select_song_menu/song_button.tscn" type="PackedScene" id=4]
[ext_resource path="res://sprites/download_icon.svg" type="Texture" id=5]
[ext_resource path="res://scenes/loading_icon/loading_icon.tscn" type="PackedScene" id=6]
[ext_resource path="res://scenes/select_song_menu/songs_container.gd" type="Script" id=7]
[ext_resource path="res://scenes/select_song_menu/global_search_menu/search_bridge.gd" type="Script" id=8]
[ext_resource path="res://scenes/select_song_menu/global_search_menu/menu_state.gd" type="Script" id=9]
[ext_resource path="res://scenes/select_song_menu/global_search_menu/close_menu.gd" type="Script" id=10]
[ext_resource path="res://scenes/select_song_menu/global_search_menu/loading_icon_node.gd" type="Script" id=11]
[ext_resource path="res://scenes/search_http/youtube/download_youtube.gd" type="Script" id=12]
[ext_resource path="res://scenes/select_song_menu/global_search_menu/download_button_node.gd" type="Script" id=13]
[ext_resource path="res://scenes/select_song_menu/global_search_menu/loading_message.gd" type="Script" id=14]
[ext_resource path="res://scenes/game/label_font.tres" type="DynamicFont" id=15]
[ext_resource path="res://scenes/popup_message/confirm_popup/confirm_popup.tscn" type="PackedScene" id=16]
[ext_resource path="res://scenes/select_song_menu/global_search_menu/abort_requests.gd" type="Script" id=17]

[sub_resource type="StyleBoxLine" id=2]
color = Color( 1, 1, 1, 1 )
thickness = 5

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.145098, 0.145098, 0.145098, 1 )
corner_radius_top_left = 150
corner_radius_top_right = 150

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.552941, 0.552941, 0.552941, 1 )
corner_radius_top_left = 150
corner_radius_top_right = 150

[sub_resource type="StyleBoxEmpty" id=5]

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0, 0, 0, 1 )
corner_radius_top_left = 150
corner_radius_top_right = 150

[node name="SearchResult" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.101961, 0.101961, 0.101961, 1 )

[node name="CloseMenuButton" type="TextureButton" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -192.0
margin_bottom = 192.0
texture_normal = ExtResource( 3 )

[node name="PressColorTintNode" type="Node" parent="CloseMenuButton"]
script = ExtResource( 1 )

[node name="Header" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
custom_constants/separation = 13

[node name="Title" type="Label" parent="Header"]
margin_right = 1920.0
margin_bottom = 151.0
rect_pivot_offset = Vector2( -3089, 644 )
size_flags_horizontal = 3
size_flags_vertical = 6
custom_fonts/font = ExtResource( 2 )
text = "Search Result"
align = 1
valign = 1

[node name="Underline" type="Panel" parent="Header"]
margin_left = 410.0
margin_top = 164.0
margin_right = 1510.0
margin_bottom = 244.0
rect_min_size = Vector2( 1100, 0 )
size_flags_horizontal = 6
size_flags_vertical = 3
custom_styles/panel = SubResource( 2 )

[node name="Separator" type="Control" parent="Header"]
margin_top = 257.0
margin_right = 1920.0
margin_bottom = 259.0
rect_min_size = Vector2( 0, 2 )

[node name="Content" type="MarginContainer" parent="Header"]
margin_top = 272.0
margin_right = 1920.0
margin_bottom = 1080.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 10.0
custom_constants/margin_right = 40
custom_constants/margin_left = 40
custom_constants/margin_bottom = 200

[node name="ScrollContainer" type="ScrollContainer" parent="Header/Content"]
margin_left = 40.0
margin_right = 1880.0
margin_bottom = 608.0

[node name="MarginContainer" type="MarginContainer" parent="Header/Content/ScrollContainer"]
margin_right = 1840.0
margin_bottom = 608.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 40
custom_constants/margin_top = 40
custom_constants/margin_left = 40
custom_constants/margin_bottom = 40

[node name="Songs" type="HFlowContainer" parent="Header/Content/ScrollContainer/MarginContainer"]
unique_name_in_owner = true
margin_left = 40.0
margin_top = 40.0
margin_right = 1800.0
margin_bottom = 568.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/vseparation = 40
custom_constants/hseparation = 20
script = ExtResource( 7 )
song_button_scene = ExtResource( 4 )

[node name="DownloadButton" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -104.0
margin_top = -159.0
margin_right = 90.0
custom_styles/hover = SubResource( 3 )
custom_styles/pressed = SubResource( 4 )
custom_styles/focus = SubResource( 5 )
custom_styles/normal = SubResource( 6 )

[node name="TextureRect" type="TextureRect" parent="DownloadButton"]
self_modulate = Color( 0.364706, 0.87451, 0.223529, 1 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -50.0
margin_top = -50.0
margin_right = 50.0
margin_bottom = 50.0
texture = ExtResource( 5 )
expand = true

[node name="DownloadButtonNode" type="Node" parent="DownloadButton"]
script = ExtResource( 13 )
request = NodePath("../DownloadYoutube")

[node name="DownloadYoutube" type="Node" parent="DownloadButton"]
script = ExtResource( 12 )

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_left = 24.0
margin_top = 24.0
margin_right = 394.0
margin_bottom = 90.0

[node name="LoadingIcon" parent="HBoxContainer" instance=ExtResource( 6 )]
unique_name_in_owner = true
margin_right = 84.0
margin_bottom = 66.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.3

[node name="LoadingIconNode" type="Node" parent="HBoxContainer/LoadingIcon"]
script = ExtResource( 11 )

[node name="LoadingMessage" type="Label" parent="HBoxContainer"]
margin_left = 88.0
margin_top = 19.0
margin_right = 370.0
margin_bottom = 47.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 15 )
text = "awaww"

[node name="LoadingMessage" type="Node" parent="HBoxContainer/LoadingMessage"]
script = ExtResource( 14 )

[node name="SearchBridge" type="Node" parent="."]
script = ExtResource( 8 )
target = NodePath("../Header/Content/ScrollContainer/MarginContainer/Songs")
root = NodePath("..")

[node name="MenuState" type="Node" parent="."]
unique_name_in_owner = true
script = ExtResource( 9 )

[node name="CloseMenu" type="Node" parent="."]
script = ExtResource( 10 )
root = NodePath("..")

[node name="ConfirmExit" parent="." instance=ExtResource( 16 )]
unique_name_in_owner = true

[node name="Message" parent="ConfirmExit/VBoxContainer/MarginContainer/VBoxContainer" index="0"]
text = "CONFIRM_ABORT_DOWNLOAD"
autowrap = true

[node name="AbortRequests" type="Node" parent="ConfirmExit"]
script = ExtResource( 17 )
request_handlers = [ NodePath("../../DownloadButton/DownloadYoutube") ]

[connection signal="pressed" from="CloseMenuButton" to="CloseMenu" method="_on_CloseMenuButton_pressed"]
[connection signal="double_clicked" from="Header/Content/ScrollContainer/MarginContainer/Songs" to="DownloadButton/DownloadButtonNode" method="_on_Songs_double_clicked"]
[connection signal="song_selected" from="Header/Content/ScrollContainer/MarginContainer/Songs" to="DownloadButton/DownloadButtonNode" method="_on_Songs_song_selected"]
[connection signal="chunk_downloaded" from="DownloadButton/DownloadYoutube" to="HBoxContainer/LoadingMessage/LoadingMessage" method="_on_DownloadYoutube_chunk_downloaded"]
[connection signal="download_done" from="DownloadButton/DownloadYoutube" to="DownloadButton/DownloadButtonNode" method="_on_DownloadYoutube_download_done"]
[connection signal="download_error_occurred" from="DownloadButton/DownloadYoutube" to="DownloadButton/DownloadButtonNode" method="_on_DownloadYoutube_download_error_occurred"]
[connection signal="download_started" from="DownloadButton/DownloadYoutube" to="DownloadButton/DownloadButtonNode" method="_on_DownloadYoutube_download_started"]
[connection signal="song_downloaded" from="DownloadButton/DownloadYoutube" to="DownloadButton/DownloadButtonNode" method="_on_DownloadYoutube_song_downloaded"]
[connection signal="menu_state_changed" from="MenuState" to="HBoxContainer/LoadingIcon/LoadingIconNode" method="_on_MenuState_menu_state_changed"]
[connection signal="menu_state_changed" from="MenuState" to="HBoxContainer/LoadingMessage/LoadingMessage" method="_on_MenuState_menu_state_changed"]
[connection signal="yes_pressed" from="ConfirmExit" to="ConfirmExit/AbortRequests" method="_on_ConfirmPopup_yes_pressed"]

[editable path="ConfirmExit"]
